tests/resources/SyntaxErrorTest/sources/MalformedString.stab.cs
using java.lang;

public class C {
	string s = "
	";
}
